--- a/index.html
+++ b/index.html
@@ -22,68 +22,68 @@
             </div>
         </nav>
     </header>
-    <!--    <main>-->
-    <!--        <section class="simple-things">-->
-    <!--            <article class="simple-things__description">-->
-    <!--                <h1>Простые вещи. Из бумаги</h1>-->
-    <!--                <p>Бума́га (предположительно от итал. bombagia, первоисточником же считается иранский) — волокнистый-->
-    <!--                    материал с минеральными добавками.</p>-->
-    <!--                <button class="btn">Каталог</button>-->
-    <!--            </article>-->
-    <!--            <div class="simple-things__picture">-->
-    <!--                <img src="assets/paper.png" alt="paper">-->
-    <!--            </div>-->
-    <!--        </section>-->
-    <!--        <section class="box">-->
-    <!--            <div class="box__list">-->
-    <!--                <div class="box__list__item">-->
-    <!--                    <div class="card-img">-->
-    <!--                        <img src="assets/card_1.png" alt="card 1">-->
-    <!--                    </div>-->
-    <!--                    <div class="card-text">-->
-    <!--                        <strong>V.1</strong>-->
-    <!--                        <p>Результат вашего обучения</p>-->
-    <!--                    </div>-->
-    <!--                </div>-->
-    <!--                <div class="box__list__item">-->
-    <!--                    <div class="card-img">-->
-    <!--                        <img src="assets/card_2.png" alt="card 2">-->
-    <!--                    </div>-->
-    <!--                    <div class="card-text">-->
-    <!--                        <strong>V.2</strong>-->
-    <!--                        <p>Результат вашего обучения</p>-->
-    <!--                    </div>-->
-    <!--                </div>-->
-    <!--                <div class="box__list__item">-->
-    <!--                    <div class="card-img">-->
-    <!--                        <img src="assets/card_3.png" alt="card 3">-->
-    <!--                    </div>-->
-    <!--                    <div class="card-text">-->
-    <!--                        <strong>V.3</strong>-->
-    <!--                        <p>Результат вашего обучения</p>-->
-    <!--                    </div>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <article class="box__image">-->
-    <!--                <div class="box__image__img">-->
-    <!--                    <img src="assets/box.png" alt="box">-->
-    <!--                </div>-->
-    <!--                <div class="box__image__text">-->
-    <!--                    <h2>-->
-    <!--                        Максимальная белизна-->
-    <!--                    </h2>-->
-    <!--                    <p>-->
-    <!--                        Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества: мел, тальк, каолин и др. Эта операция называется наполнением. Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.-->
-    <!--                    </p>-->
-    <!--                </div>-->
-    <!--            </article>-->
-    <!--        </section>-->
-    <!--        <section class="products">-->
-    <!--            <div class="product__item">-->
-    <!--                <img src="pr"-->
-    <!--            </div>-->
-    <!--        </section>-->
-    <!--    </main>-->
+        <main>
+            <section class="main-screen">
+                <article class="main-screen__description">
+                    <h1>Простые вещи. Из бумаги</h1>
+                    <p>Бума́га (предположительно от итал. bombagia, первоисточником же считается иранский) — волокнистый
+                        материал с минеральными добавками.</p>
+                    <button class="btn">Каталог</button>
+                </article>
+                <div class="main-screen__picture">
+                    <img src="assets/paper.png" alt="paper">
+                </div>
+            </section>
+<!--            <section class="box">-->
+<!--                <div class="box__list">-->
+<!--                    <div class="box__list__item">-->
+<!--                        <div class="card-img">-->
+<!--                            <img src="assets/card_1.png" alt="card 1">-->
+<!--                        </div>-->
+<!--                        <div class="card-text">-->
+<!--                            <strong>V.1</strong>-->
+<!--                            <p>Результат вашего обучения</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="box__list__item">-->
+<!--                        <div class="card-img">-->
+<!--                            <img src="assets/card_2.png" alt="card 2">-->
+<!--                        </div>-->
+<!--                        <div class="card-text">-->
+<!--                            <strong>V.2</strong>-->
+<!--                            <p>Результат вашего обучения</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="box__list__item">-->
+<!--                        <div class="card-img">-->
+<!--                            <img src="assets/card_3.png" alt="card 3">-->
+<!--                        </div>-->
+<!--                        <div class="card-text">-->
+<!--                            <strong>V.3</strong>-->
+<!--                            <p>Результат вашего обучения</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <article class="box__image">-->
+<!--                    <div class="box__image__img">-->
+<!--                        <img src="assets/box.png" alt="box">-->
+<!--                    </div>-->
+<!--                    <div class="box__image__text">-->
+<!--                        <h2>-->
+<!--                            Максимальная белизна-->
+<!--                        </h2>-->
+<!--                        <p>-->
+<!--                            Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества: мел, тальк, каолин и др. Эта операция называется наполнением. Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.-->
+<!--                        </p>-->
+<!--                    </div>-->
+<!--                </article>-->
+<!--            </section>-->
+<!--            <section class="products">-->
+<!--                <div class="product__item">-->
+<!--                    <img src="pr"-->
+<!--                </div>-->
+<!--            </section>-->
+        </main>
     <!--    <footer class="page__footer">-->
     <!--        <div class="page__footer__info">-->
     <!--            <div class="logo">-->
