--- a/index.html
+++ b/index.html
@@ -34,50 +34,50 @@
                     <img src="assets/paper.png" alt="paper">
                 </div>
             </section>
-<!--            <section class="box">-->
-<!--                <div class="box__list">-->
-<!--                    <div class="box__list__item">-->
-<!--                        <div class="card-img">-->
-<!--                            <img src="assets/card_1.png" alt="card 1">-->
-<!--                        </div>-->
-<!--                        <div class="card-text">-->
-<!--                            <strong>V.1</strong>-->
-<!--                            <p>Результат вашего обучения</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="box__list__item">-->
-<!--                        <div class="card-img">-->
-<!--                            <img src="assets/card_2.png" alt="card 2">-->
-<!--                        </div>-->
-<!--                        <div class="card-text">-->
-<!--                            <strong>V.2</strong>-->
-<!--                            <p>Результат вашего обучения</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="box__list__item">-->
-<!--                        <div class="card-img">-->
-<!--                            <img src="assets/card_3.png" alt="card 3">-->
-<!--                        </div>-->
-<!--                        <div class="card-text">-->
-<!--                            <strong>V.3</strong>-->
-<!--                            <p>Результат вашего обучения</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <article class="box__image">-->
-<!--                    <div class="box__image__img">-->
-<!--                        <img src="assets/box.png" alt="box">-->
-<!--                    </div>-->
-<!--                    <div class="box__image__text">-->
-<!--                        <h2>-->
-<!--                            Максимальная белизна-->
-<!--                        </h2>-->
-<!--                        <p>-->
-<!--                            Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества: мел, тальк, каолин и др. Эта операция называется наполнением. Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.-->
-<!--                        </p>-->
-<!--                    </div>-->
-<!--                </article>-->
-<!--            </section>-->
+            <section class="info">
+                <div class="info__list">
+                    <div class="info__list__item">
+                        <div class="card-img">
+                            <img src="assets/card_1.png" alt="card 1">
+                        </div>
+                        <div class="card-text">
+                            <strong>V.1</strong>
+                            <p>Результат вашего обучения</p>
+                        </div>
+                    </div>
+                    <div class="info__list__item">
+                        <div class="card-img">
+                            <img src="assets/card_2.png" alt="card 2">
+                        </div>
+                        <div class="card-text">
+                            <strong>V.2</strong>
+                            <p>Результат вашего обучения</p>
+                        </div>
+                    </div>
+                    <div class="info__list__item">
+                        <div class="card-img">
+                            <img src="assets/card_3.png" alt="card 3">
+                        </div>
+                        <div class="card-text">
+                            <strong>V.3</strong>
+                            <p>Результат вашего обучения</p>
+                        </div>
+                    </div>
+                </div>
+                <article class="info__image">
+                    <div class="info__image__img">
+                        <img src="assets/box.png" alt="box">
+                    </div>
+                    <div class="info__image__text">
+                        <h2>
+                            Максимальная белизна
+                        </h2>
+                        <p>
+                            Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества: мел, тальк, каолин и др. Эта операция называется наполнением. Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.
+                        </p>
+                    </div>
+                </article>
+            </section>
 <!--            <section class="products">-->
 <!--                <div class="product__item">-->
 <!--                    <img src="pr"-->
