--- a/index.html
+++ b/index.html
@@ -73,16 +73,41 @@
                             Максимальная белизна
                         </h2>
                         <p>
-                            Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества: мел, тальк, каолин и др. Эта операция называется наполнением. Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.
+                            Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества: мел, тальк, каолин и др. Эта операция называется наполнением. Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.
                         </p>
                     </div>
                 </article>
             </section>
-<!--            <section class="products">-->
-<!--                <div class="product__item">-->
-<!--                    <img src="pr"-->
-<!--                </div>-->
-<!--            </section>-->
+            <section class="products">
+                <div class="products__item">
+                    <img class="products__item__image" src="assets/product_1.png" alt="product">
+                    <strong>Упаковка</strong>
+                    <p class="products__item__count">Тираж: от 50 штук</p>
+                    <p class="products__item__description">Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму под заказ.</p>
+                    <a>Подробнее <img src="assets/Arrow.svg" alt="arrow"> </a>
+                </div>
+                <div class="products__item">
+                    <img class="products__item__image" src="assets/product_2.png" alt="product">
+                    <strong>Пакеты</strong>
+                    <p class="products__item__count">Тираж: от 200 штук</p>
+                    <p class="products__item__description">С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные расцветки и дизайн.</p>
+                    <a>Подробнее <img src="assets/Arrow.svg" alt="arrow"> </a>
+                </div>
+                <div class="products__item">
+                    <img class="products__item__image" src="assets/product_3.png" alt="product">
+                    <strong>Кейсы</strong>
+                    <p class="products__item__count">Тираж: от 30 штук</p>
+                    <p class="products__item__description">Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная бумага.</p>
+                    <a>Подробнее <img src="assets/Arrow.svg" alt="arrow"> </a>
+                </div>
+                <div class="products__item">
+                    <img class="products__item__image" src="assets/product_4.png" alt="product">
+                    <strong>Другие изделия</strong>
+                    <p class="products__item__count">Тираж: от 100 штук</p>
+                    <p class="products__item__description">Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие сроки.</p>
+                    <a>Подробнее <img src="assets/Arrow.svg" alt="arrow"> </a>
+                </div>
+            </section>
         </main>
     <!--    <footer class="page__footer">-->
     <!--        <div class="page__footer__info">-->
