--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
                     <a>Подробнее <img src="assets/Arrow.svg" alt="arrow"> </a>
                 </div>
             </section>
+            <section class="brands">
+                <div class="brands__item">
+                    <img src="assets/brand_1.png" alt="brand">
+                </div>
+                <div class="brands__item">
+                    <img src="assets/brand_2.png" alt="brand">
+                </div>
+                <div class="brands__item">
+                    <img src="assets/brand_3.png" alt="brand">
+                </div>
+                <div class="brands__item">
+                    <img src="assets/brand_4.png" alt="brand">
+                </div>
+            </section>
         </main>
     <!--    <footer class="page__footer">-->
     <!--        <div class="page__footer__info">-->
