--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
                     <img src="assets/brand_4.png" alt="brand">
                 </div>
             </section>
+            <section class="sale">
+                <article class="sale__description">
+                    <h2>Simple скетчбук</h2>
+                    <p>80 листов, твердая обложка, бумага  Fabriano 200 г/м2. Подойдет и для графики и для акварели. Для самых смелых творческих замыслов!</p>
+                    <button class="btn">Купить</button>
+                </article>
+                <div class="sale__img">
+                    <img src="assets/book.png" alt="sketchbook">
+                </div>
+            </section>
         </main>
     <!--    <footer class="page__footer">-->
     <!--        <div class="page__footer__info">-->
