--- a/index.html
+++ b/index.html
@@ -133,22 +133,22 @@
                 </div>
             </section>
         </main>
-    <!--    <footer class="page__footer">-->
-    <!--        <div class="page__footer__info">-->
-    <!--            <div class="logo">-->
-    <!--                <img src="assets/logo.svg" alt="logo">-->
-    <!--            </div>-->
-    <!--            <div class="media">-->
-    <!--                <img src="assets/facebook.png" alt="facebook">-->
-    <!--                <img src="assets/twitter.png" alt="twitter">-->
-    <!--                <img src="assets/insta.png" alt="instagram">-->
-    <!--                <img src="assets/youtube.png" alt="youtube">-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="page__footer__end">-->
-    <!--            <p>Simple ® 2021</p>-->
-    <!--        </div>-->
-    <!--    </footer>-->
+        <footer class="page__footer">
+            <div class="page__footer__info">
+                <div class="logo">
+                    <img src="assets/logo_white.svg" alt="logo">
+                </div>
+                <div class="media">
+                    <img src="assets/facebook.png" alt="facebook">
+                    <img src="assets/twitter.png" alt="twitter">
+                    <img src="assets/insta.png" alt="instagram">
+                    <img src="assets/youtube.png" alt="youtube">
+                </div>
+            </div>
+            <div class="page__footer__end">
+                <p>SIMPLE ® 2021</p>
+            </div>
+        </footer>
 </div>
 
 </body>
